Finished shared-vs-separate node experiment

--- a/data/plot_tasks.ipynb
+++ b/data/plot_tasks.ipynb
@@ -42,7 +42,7 @@
     "end = -math.inf\n",
     "\n",
     "#NOTE: EDITABBLE (filename)\n",
-    "with open(\"report_mt_exec.txt\") as fin:\n",
+    "with open(\"report_mt_exec_separate_nodes.txt\") as fin:\n",
     "    for line in fin:\n",
     "        func_name = func_re.search(line).group()[2:-1]\n",
     "        thread = thread_re.search(line).group()\n",
@@ -61,14 +61,16 @@
     "        \n",
     "        if not thread in threads:\n",
     "            threads.append(thread)\n",
-    "\n",
+    "            \n",
     "        # TODO: Change this to release when those are implemented and change the tuple from a duo to a trio\n",
     "        if event_type == \"entry\":\n",
     "            data[func_name].append({\"thread\": thread, \"timings\": [time, -1]})\n",
     "        elif event_type == \"exit\":\n",
     "            assert(data[func_name][-1][\"timings\"][ENTRY] > 0)   # Exit is first event seen for this function\n",
     "            assert(data[func_name][-1][\"timings\"][EXIT] == -1)  # Exit without an entrance\n",
-    "            assert(data[func_name][-1][\"thread\"] == thread)     # Exited on thread different from one entered into\n",
+    "            assert(data[func_name][-1][\"thread\"] == thread)     # Exited on thread different from one entered into   \n",
+    "            \n",
+    "\n",
     "            data[func_name][-1][\"timings\"][EXIT] = time     \n"
    ],
    "outputs": [],
@@ -79,11 +81,19 @@
    "execution_count": null,
    "source": [
     "# NOTE: EDITABBLE\n",
-    "timelimit_ms = 500\n",
+    "timelimit_ms = 1500\n",
     "\n",
     "# NOTE: EDITABBLE\n",
     "# Put text substitutions here for prettier graph\n",
-    "function_remapping = {\"garbage_name_with_underscores_callback\": \"PRETTY\"}\n",
+    "# function_remapping = {\"mt_exec_shared_node_publishing_timer\": \"Timer\",\n",
+    "#                       \"mt_exec_shared_node_high_prio_callback\": \"High\",\n",
+    "#                       \"mt_exec_shared_node_med_prio_callback\": \"Mid\",\n",
+    "#                       \"mt_exec_shared_node_low_prio_callback\": \"Low\"}\n",
+    "function_remapping = {\"mt_exec_personal_nodes_publishing_timer\": \"Timer\",\n",
+    "                      \"mt_exec_personal_nodes_subscriber_callback1\": \"High\",\n",
+    "                      \"mt_exec_personal_nodes_subscriber_callback2\": \"Mid\",\n",
+    "                      \"mt_exec_personal_nodes_subscriber_callback3\": \"Low\"}\n",
+    "\n",
     "\n",
     "# TODO: Rewrite a lot of this when release implemented\n",
     "# Converts data to express time in ms, relative to start of benchmark. Crop of\n",
@@ -120,11 +130,12 @@
     " \n",
     "# Setting X-axis limits\n",
     "gnt.set_xlim(0, timelimit_ms)\n",
-    "gnt.xaxis.set_major_locator(MultipleLocator(100))\n",
-    "gnt.xaxis.set_minor_locator(MultipleLocator(10))\n",
+    "gnt.xaxis.set_major_locator(MultipleLocator(500))\n",
+    "gnt.xaxis.set_minor_locator(MultipleLocator(100))\n",
     " \n",
+    "# NOTE: EDITALBE\n",
     "# Setting labels for x-axis and y-axis\n",
-    "gnt.set_title('Multithreaded executor, shared node')\n",
+    "gnt.set_title('Multithreaded executor, separate nodes')\n",
     "gnt.set_xlabel('Time (ms)')\n",
     " \n",
     "# Setting ticks on y-axis\n",
@@ -140,14 +151,21 @@
     "    gnt.broken_barh(timings, (1+i, 9), facecolors=colors)\n",
     "    i+=10\n",
     " \n",
-    "fig.set_size_inches(12, 5)\n",
+    "fig.set_size_inches(8, 4.5)\n",
     "plt.tight_layout()\n",
     "\n",
-    "# NOTE: EDITTABLE\n",
-    "plt.savefig(\"mt_exec_same_node.png\")"
+    "# NOTE: EDITABLE\n",
+    "plt.savefig(\"mt_exec_separate_node.png\")"
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
