Copied Casini's test

--- a/data/plot_tasks.ipynb
+++ b/data/plot_tasks.ipynb
@@ -42,7 +42,7 @@
     "end = -math.inf\n",
     "\n",
     "#NOTE: EDITABBLE (filename)\n",
-    "with open(\"report_mt_exec_separate_nodes.txt\") as fin:\n",
+    "with open(\"report_casini_copy.txt\") as fin:\n",
     "    for line in fin:\n",
     "        func_name = func_re.search(line).group()[2:-1]\n",
     "        thread = thread_re.search(line).group()\n",
@@ -81,7 +81,7 @@
    "execution_count": null,
    "source": [
     "# NOTE: EDITABBLE\n",
-    "timelimit_ms = 1500\n",
+    "timelimit_ms = 1000\n",
     "\n",
     "# NOTE: EDITABBLE\n",
     "# Put text substitutions here for prettier graph\n",
@@ -89,16 +89,24 @@
     "#                       \"mt_exec_shared_node_high_prio_callback\": \"High\",\n",
     "#                       \"mt_exec_shared_node_med_prio_callback\": \"Mid\",\n",
     "#                       \"mt_exec_shared_node_low_prio_callback\": \"Low\"}\n",
-    "function_remapping = {\"mt_exec_personal_nodes_publishing_timer\": \"Timer\",\n",
-    "                      \"mt_exec_personal_nodes_subscriber_callback1\": \"High\",\n",
-    "                      \"mt_exec_personal_nodes_subscriber_callback2\": \"Mid\",\n",
-    "                      \"mt_exec_personal_nodes_subscriber_callback3\": \"Low\"}\n",
+    "# function_remapping = {\"mt_exec_personal_nodes_publishing_timer\": \"Timer\",\n",
+    "#                       \"mt_exec_personal_nodes_subscriber_callback1\": \"High\",\n",
+    "#                       \"mt_exec_personal_nodes_subscriber_callback2\": \"Mid\",\n",
+    "#                       \"mt_exec_personal_nodes_subscriber_callback3\": \"Low\"}\n",
+    "function_remapping = {\"mt_exec_casini_copy_timer1_callback\": \"Timer1\",\n",
+    "                      \"mt_exec_casini_copy_timer2_callback\": \"Timer2\",\n",
+    "                      \"mt_exec_casini_copy_hi_subscriber_callback\": \"H\",\n",
+    "                      \"mt_exec_casini_copy_me_subscriber_callback\": \"M\",\n",
+    "                      \"mt_exec_casini_copy_lo_subscriber_callback\": \"L\",\n",
+    "                      \"mt_exec_casini_copy_hi_service_callback\": \"SH\",\n",
+    "                      \"mt_exec_casini_copy_me_service_callback\": \"SM\",\n",
+    "                      \"mt_exec_casini_copy_lo_service_callback\": \"SL\"}\n",
     "\n",
     "\n",
     "# TODO: Rewrite a lot of this when release implemented\n",
     "# Converts data to express time in ms, relative to start of benchmark. Crop of\n",
     "# tasks that occur after timelimit\n",
-    "interm = {}\n",
+    "interm = dict.fromkeys(function_remapping.values())\n",
     "for f, l in data.items():\n",
     "    if f in function_remapping.keys():\n",
     "        f = function_remapping[f]\n",
@@ -129,14 +137,25 @@
     "gnt.set_ylim(0, 1+10*num_funs)\n",
     " \n",
     "# Setting X-axis limits\n",
-    "gnt.set_xlim(0, timelimit_ms)\n",
+    "gnt.set_xlim(-50, timelimit_ms+50)\n",
     "gnt.xaxis.set_major_locator(MultipleLocator(500))\n",
     "gnt.xaxis.set_minor_locator(MultipleLocator(100))\n",
     " \n",
-    "# NOTE: EDITALBE\n",
+    "# NOTE: EDITABLE\n",
     "# Setting labels for x-axis and y-axis\n",
-    "gnt.set_title('Multithreaded executor, separate nodes')\n",
+    "#gnt.set_title('Scheduability Test')\n",
     "gnt.set_xlabel('Time (ms)')\n",
+    "\n",
+    "# NOTE: EDITABLE\n",
+    "# Set reference lines in chart\n",
+    "for i, xc in enumerate([50, 150, 550, 650]):\n",
+    "    plt.axvline(x=xc, color=\"gray\", linestyle='-', linewidth=1)\n",
+    "    plt.text(xc+3, 10*num_funs+3, \"T%d\"%(i+1))\n",
+    "plt.axvline(x=0, color=list(color_mappings.values())[0], linestyle='--', linewidth=1)\n",
+    "plt.axvline(x=220, color=list(color_mappings.values())[1], linestyle='--', linewidth=1)\n",
+    "plt.axvline(x=600, color=list(color_mappings.values())[0], linestyle='--', linewidth=1)\n",
+    "plt.axvline(x=800, color=list(color_mappings.values())[0], linestyle='--', linewidth=1)\n",
+    "\n",
     " \n",
     "# Setting ticks on y-axis\n",
     "gnt.set_yticks(list(range(5,num_funs*10+5, 10)))\n",
@@ -155,7 +174,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# NOTE: EDITABLE\n",
-    "plt.savefig(\"mt_exec_separate_node.png\")"
+    "plt.savefig(\"mt_exec_casini_copy.png\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -163,9 +182,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -174,19 +193,19 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.10 64-bit"
+   "display_name": "Python 3.6.9 64-bit"
   },
   "language_info": {
+   "name": "python",
+   "version": "3.8.10",
+   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "orig_nbformat": 4
  },
