Added concurrent children experiment

--- a/data/plot_tasks.ipynb
+++ b/data/plot_tasks.ipynb
@@ -42,7 +42,7 @@
     "end = -math.inf\n",
     "\n",
     "#NOTE: EDITABBLE (filename)\n",
-    "with open(\"report_ready_set.txt\") as fin:\n",
+    "with open(\"report_concurrent_children.txt\") as fin:\n",
     "    for line in fin:\n",
     "        func_name = func_re.search(line).group()[2:-1]\n",
     "        thread = thread_re.search(line).group()\n",
