Added polling point experiment. Inconclusive results

--- a/data/plot_tasks.ipynb
+++ b/data/plot_tasks.ipynb
@@ -42,7 +42,7 @@
     "end = -math.inf\n",
     "\n",
     "#NOTE: EDITABBLE (filename)\n",
-    "with open(\"report_concurrent_children.txt\") as fin:\n",
+    "with open(\"report_polling_point_wait.txt\") as fin:\n",
     "    for line in fin:\n",
     "        func_name = func_re.search(line).group()[2:-1]\n",
     "        thread = thread_re.search(line).group()\n",
@@ -103,16 +103,21 @@
     "#                       \"mt_exec_casini_copy_lo_service_callback\": \"SL\"}\n",
     "# function_remapping = {\"mt_exec_ready_set_hi_subscriber_callback\": \"H\",\n",
     "#                       \"mt_exec_ready_set_me_subscriber_callback\": \"M\"}\n",
-    "function_remapping = {\"mt_exec_concurrent_children_publishing_timer\": \"Timer\",\n",
-    "                      \"mt_exec_concurrent_children_subscriber_callback1\": \"H\",\n",
-    "                      \"mt_exec_concurrent_children_subscriber_callback2\": \"M\",\n",
-    "                      \"mt_exec_concurrent_children_subscriber_callback3\": \"L\"}\n",
+    "# function_remapping = {\"mt_exec_concurrent_children_publishing_timer\": \"Timer\",\n",
+    "#                       \"mt_exec_concurrent_children_subscriber_callback1\": \"H\",\n",
+    "#                       \"mt_exec_concurrent_children_subscriber_callback2\": \"M\",\n",
+    "#                       \"mt_exec_concurrent_children_subscriber_callback3\": \"L\"}\n",
+    "function_remapping = {\"mt_exec_polling_point_wait_flood1\": \"Stall1\",\n",
+    "                      \"mt_exec_polling_point_wait_flood2\": \"Stall2\",\n",
+    "                      \"mt_exec_polling_point_wait_flood3\": \"Stall3\",\n",
+    "                      \"mt_exec_polling_point_wait_flood4\": \"Stall4\",\n",
+    "                      \"mt_exec_polling_point_wait_subscriber_callback\": \"H\"}\n",
     "\n",
     "\n",
     "# TODO: Rewrite a lot of this when release implemented\n",
     "# Converts data to express time in ms, relative to start of benchmark. Crop of\n",
     "# tasks that occur after timelimit\n",
-    "interm = dict.fromkeys(function_remapping.values())\n",
+    "interm = {}\n",
     "for f, l in data.items():\n",
     "    if f in function_remapping.keys():\n",
     "        f = function_remapping[f]\n",
@@ -180,7 +185,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# NOTE: EDITABLE\n",
-    "plt.savefig(\"mt_concurrent_children.png\")"
+    "plt.savefig(\"mt_polling_point_threads.png\")"
    ],
    "outputs": [],
    "metadata": {}
